<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBoxPreference
        android:defaultValue="@string/pref_switchNotification_default"
        android:key="@string/pref_switchNotification"
        android:summaryOff="@string/pref_switchNotification_false"
        android:summaryOn="@string/pref_switchNotification_true"
        android:title="@string/pref_switchNotification_Title"/>


    <ListPreference
        android:defaultValue="@string/pref_serviceUpdateTime_defalut"
        android:entries="@array/pref_serviceUpdateTime_options"
        android:entryValues="@array/pref_serviceUpdateTime_values"
        android:key="@string/pref_serviceUpdateTime_key"
        android:title="@string/pref_serviceUpdateTime_title" />

</PreferenceScreen>